--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Page 2</title>
   <link rel="stylesheet" href="./css/index.css">
@@ -16,7 +15,7 @@
 
   <a href="./index.html">Назад</a>
 
-  <script src="./js/1-gallery.js"></script>
+  <script type="module" src="./js/1-gallery.js"></script>
 </body>
 
 </html>
