--- a/src/2-form.html
+++ b/src/2-form.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Page 3</title>
   <link rel="stylesheet" href="./css/styles.css" />
@@ -22,7 +21,7 @@
     <button type="submit">Submit</button>
   </form>
 
-  <script src="./js/2-form.js"></script>
+  <script type="module" src="./js/2-form.js"></script>
 </body>
 
 </html>
